# wellchart

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
.github/: renovate.json
apps/api/: .vercelignore  pyproject.toml  requirements.txt  run.py  vercel.json
apps/api/src/: api_client.py  app.py  auth.py  config.py  main.py
apps/api/src/api/api_v1/: api.py
apps/api/src/api/api_v1/auth/: verify.py
apps/api/src/api/api_v1/clients/: anthropic.py
apps/api/src/api/api_v1/processing/: text.py
apps/api/src/api/api_v1/routers/: health.py  upload.py
apps/expo/: eslint.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/expo/src/utils/: api.tsx
apps/fastapi/: pyproject.toml
apps/fastapi/api/: config.py  main.py
apps/fastapi/api/endpoints/v1/: api.py
apps/fastapi/api/endpoints/v1/auth/: verify.py
apps/fastapi/api/endpoints/v1/clients/: anthropic.py
apps/fastapi/api/endpoints/v1/routers/: health.py  upload.py
apps/nextjs/: eslint.config.js  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/nextjs/src/: env.ts
apps/nextjs/src/app/: layout.tsx  page.tsx
apps/nextjs/src/components/: navbar.tsx  sidebar-items.tsx  sidebar.tsx
apps/nextjs/src/config/: nav.ts  routes.ts
tooling/eslint/: package.json
tooling/github/: package.json
tooling/prettier/: index.js  package.json
tooling/tailwind/: eslint.config.js  package.json  tsconfig.json
tooling/typescript/: package.json
turbo/generators/: config.ts
turbo/generators/templates/: eslint.config.js.hbs  package.json.hbs  tsconfig.json.hbs
(+32 files in other folders)
